--- a/Internship/Revision/7/index.html
+++ b/Internship/Revision/7/index.html
@@ -9,7 +9,7 @@
   <body>
     <h1>Simons Says Game</h1>
     <h2>Press any key to start the game</h2>
-
+    <h4 class="high-score">High Score : 0 </h4>
     <div class="btn-container">
       <div class="line-one">
         <div class="btn red" type="button" id="red">1</div>
