--- a/Internship/Revision/8/index.html
+++ b/Internship/Revision/8/index.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Fetch and Display Data</title>
     <link rel="stylesheet" href="./style.css" />
-    <link rel="stylesheet" href="style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -16,9 +15,11 @@
   <body>
     <div class="container">
       <h1>Posts</h1>
-      <div class ="posts-container"></div>
-      <div class ="loading-indicator">Loading...</div>
-      <div class ="error-message" style="display: none">Failed to fetch data</div>
+      <div class="posts-container"></div>
+      <div class="loading-indicator">Loading...</div>
+      <div class="error-message" style="display: none">
+        Failed to fetch data
+      </div>
     </div>
 
     <script src="./app.js"></script>
