--- a/Internship/Project-1/sample-nav/index.html
+++ b/Internship/Project-1/sample-nav/index.html
@@ -8,6 +8,10 @@
       href="https://cdn.jsdelivr.net/npm/remixicon@3.2.0/fonts/remixicon.css"
       rel="stylesheet"
     />
+    <script
+      src="https://kit.fontawesome.com/fbf3c1b0e1.js"
+      crossorigin="anonymous"
+    ></script>
     <title>StockAnts</title>
   </head>
   <body>
@@ -15,3 +19,5 @@
     <script type="module" src="/src/main.js"></script>
   </body>
 </html>
+
+<style scoped></style>
