--- a/Internship/Projects/stockants/public/index.html
+++ b/Internship/Projects/stockants/public/index.html
@@ -12,6 +12,10 @@
       rel="stylesheet"
     />
     <title><%= htmlWebpackPlugin.options.title %></title>
+    <script
+      src="https://kit.fontawesome.com/fbf3c1b0e1.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
     <noscript>
